Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97453

qdoc: Unnecessary warnings when running in testing mode

XMLWordPrintable

    • 3
    • f701a03e1f2362b020b7a962187a0fe73632f17f (qt/qttools/dev) bc7639620a13a60c249afce60c2b238da16d6e15 (qt/qttools/6.2)
    • Da Vinci sprint 43

      When testing qtbase documentation build in coin, we get warnings like this:

      /home/qt/work/qt/qtbase/src/gui/platform/macos/qcocoanativeinterface.mm:79: (qdoc) warning: QCocoaGLContext is documented, but namespace QNativeInterface is not documented in any module. [Add /*! '\namespace QNativeInterface' ... */ or remove the qdoc comment marker (!) at that line number.]
      

      It's unnecessary to report this when testing, as the namespaces can be documented elsewhere (in this case, qtdoc), and we don't have access to .index files from other modules.

        For Gerrit Dashboard: QTBUG-97453
        # Subject Branch Project Status CR V

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes