qdoc: Don't warn about undocumented namespaces if -no-link-errors is set

The documentation for the namespace can be (and often is) located in
another module. As -no-link-errors is set when testing documentation
builds of individual module without loading the .index files of any
dependencies, skip these warnings.

Document the warning.

Fixes: QTBUG-97453
Change-Id: Ie899f29fde20082a5880a6c9d475db1a88b70085
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
(cherry picked from commit f701a03e1f2362b020b7a962187a0fe73632f17f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>